fix bug with subheader z-index

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -444,7 +444,7 @@ button{
 .subheader{
     position: sticky;
     top: 0;
-    z-index: 4;
+    z-index: 1;
     background-color: #fff;
     padding: 0 10px;
     box-shadow: 0 0 12px rgba(13, 35, 67, 0.17);
